demo-http-apps/demo-gw-single-listener.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gw-single-listener
spec:
  gatewayClassName: avi-lb
  listeners:
    - name: bar-https
      protocol: HTTPS
      port: 443
      hostname: "*.mydomain.com"
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: System-Default-Cert-EC
